--- a/WhatMovie/WhatMovie.csproj
+++ b/WhatMovie/WhatMovie.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rest\MovieApi.cs" />
     <Compile Include="Top.xaml.cs">
       <DependentUpon>Top.xaml</DependentUpon>
     </Compile>
@@ -150,6 +151,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Http">
+      <Version>2.2.29</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.3</Version>
     </PackageReference>
