--- a/WhatMovie/WhatMovie.csproj
+++ b/WhatMovie/WhatMovie.csproj
@@ -104,7 +104,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MovieData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\MovieApi.cs" />
     <Compile Include="Top.xaml.cs">
