--- a/WhatMovie/WhatMovie.csproj
+++ b/WhatMovie/WhatMovie.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Models\MovieData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\MovieApi.cs" />
+    <Compile Include="Storage\dbConnection.cs" />
     <Compile Include="Top.xaml.cs">
       <DependentUpon>Top.xaml</DependentUpon>
     </Compile>
@@ -157,9 +158,15 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.3</Version>
     </PackageReference>
+    <PackageReference Include="SQLite.Net-PCL">
+      <Version>3.1.1</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Storage\" />
+    <SDKReference Include="SQLite.UAP.2015, Version=3.8.11.1">
+      <Name>SQLite for Universal App Platform</Name>
+    </SDKReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
